fixed weird spacing issue near footer

--- a/themes/bc/static/css/refresh.css
+++ b/themes/bc/static/css/refresh.css
@@ -411,7 +411,6 @@ body {
 
 /* digital collections highlight */
 .homepagerefresh #digcol-highlight {
-    display: inline-block;
     width: 100%;
     min-height: 150px;
     height: 600px;
